manifests/base/argo-ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-ingress-argo
  annotations:
    kubernetes.io/ingress.class: gce
    kubernetes.io/ingress.allow-http: "true"
    cert-manager.io/cluster-issuer: demo-issuer-argo
  namespace: argocd
spec:
  tls:
  - hosts:
      - argocd.test.ioinfo.shop
    secretName: demo-secret-argo
  rules:
  - host: argocd.test.ioinfo.shop
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argo-cd-argocd-server
            port:
              number: 80
